# openbmc-tools

./: .beautysh-ignore  .linter-ignore  .shellcheck-ignore  MAINTAINERS  OWNERS  README.md  groups  openbmc-events  openbmc-sensors  openbmc-sfw  petitboot.exp  project.config  reboot.sh
Pretty_Attributes/: .devtree.py.swp  README.md  devtree.py  help_usage.txt
adcapp/src/: adc.h  adcapp.c  adcifc.c
altitude/: altitude
amboar/obmc-scripts/altitude/: altitude
amboar/obmc-scripts/bi2cp/: README.md  bi2cp
amboar/obmc-scripts/dbus-pcap/: dbus-pcap
amboar/obmc-scripts/ddconvnotrunc/: ddconvnotrunc
amboar/obmc-scripts/maintainers/: README.md  obmc-gerrit
amboar/obmc-scripts/maintainers/obmc/: maintainers.py
amboar/obmc-scripts/netboot/: netboot
amboar/obmc-scripts/reboot-ping-pong/: rpp
amboar/obmc-scripts/witherspoon-apply-power/: README.md  apply-power
autojson/: autojson.py
bbdbg/: bbdbg
bi2cp/: README.md  bi2cp
blobtool/: main.cpp  metricblob_parse.cpp
blobtool/proto/: metricblob.pb.cc  metricblob.pb.h  metricblob.proto
check_journal/: check_journal
dbus-pcap/: README.md  dbus-pcap
dbus-top/: .clang-format  .gitignore  README.md  analyzer.cpp  analyzer.hpp  bargraph.hpp  dbus_capture.cpp  dbus_capture.hpp  dbus_top_recipe.bb  histogram.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  meson.build  rect.hpp  sensorhelper.cpp  sensorhelper.hpp  views.cpp  views.hpp  xmlparse.cpp  xmlparse.hpp
dbus-top/subprojects/: fmt.wrap  sdbusplus.wrap
dbus-vis/: .gitignore  README.md  boost_handler_timeline_vis.js  dbus-pcap  dbus_pcap_loader.js  dbus_timeline_vis.js  dbus_vis.css  index.html  info_panel.js  initialization.js  ipmi_capture.js  ipmi_parse.js  ipmi_timeline_vis.js  ipmi_vis.css  linecount.py  main.js  package.json  renderer.js  timeline_view.js
dbusView/: dbusView.py
dbus_sensor_tester/: dbus_sensor_tester.bb  main.cpp  meson.build
dbus_sensor_tester/subprojects/: cli11.wrap
dbuscapture/: dbuscapture.cpp
ddconvnotrunc/: ddconvnotrunc
edtanous/: results.txt  rootfs_size.py
emilyshaffer/cla-signers/: cla-signers
expectedJsonChecker/: README.md  expectedJsonChecker.py
feistjj/: dbusView.py
format-yaml/: format-yaml.py
fruid-util/: CMakeLists.txt  FRUID-UTIL.README.md  README.md  fruid-util.cpp  includes.hpp
fruid-util/includes/: fruid-util.hpp  includes.hpp
fruid-util/source/: fruid-util.cpp
geissonator/: format-yaml  obmc-sync
geissonator/openbmc-events/: openbmc-events  openbmc-sensors  openbmc-sfw
gpiotool/: Makefile  README  config.h  config.status  configure  configure.ac
gpiotool/autom4te.cache/: output.1  requests  traces.1
gpiotool/src/: Makefile  Makefile.am  Makefile.in  gpio.h  gpioifc.c  gpiotool.c
gpiotool/src/.deps/: EINTR_wrappers.Po  gpioifc.Po  gpiotool.Po
hongweiz/adcapp/src/: EINTR_wrappers.h  adcifc.c
hongweiz/gpiotool/src/: EINTR_wrappers.c  gpioifc.h
hongweiz/pwmtachtool/: LICENSE
hongweiz/pwmtachtool/src/: EINTR_wrappers.c  EINTR_wrappers.h  libpwmtach.h  pwmtach.c  pwmtachtool.c
i2c/: tree.py
i2c-bmk/: i2c_bmk.cpp  i2c_replay.cpp  i2c_topology.cpp  i2c_topology.hpp
infra/: autobump.pl  openbmc-autobump.py
ipkdbg/: Makefile  NOTES.ipkdbg.md  README.md  build-opkg  debug_dump.py  ipkdbg.in
leiyu/obmc-utils/: README.md  sensor_map.yaml  sensor_yaml_config.py  update-bmc.py  upload_and_update.py
maintainers/: obmc-gerrit
maintainers/obmc/: maintainers.py  reviewlist.py
mock-sensor-tool/: .gitignore  README  README.md  main.cpp  meson.build  mock-sensor-tool.cpp  mock-sensor-tool.hpp
mock-sensor-tool/test/: README  meson.build  test-user.cpp
mock-sensor-tool/tests/: read.cpp
msbarth/: README.md  expectedJsonChecker.py
netboot/: README.md  netboot
nginx-log-analysis/: README.md  analyze-nginx-log
oem-firmware-update/: CMakeLists.txt
oem-firmware-update/fw-update/: CMakeLists.txt
oem-firmware-update/fw-update/src/: firmware_update.cpp
oom-parser/: .oom_parser.py.swp  oom_parser.py  output.txt
openbmc-autobump/: openbmc-autobump.py
openbmctool/: README.md  openbmctool.py
openbmctool/build-scripts/: Makefile  openbmctool-rhel8.spec
overlay/: overlay
pldm/: pdrdump.sh
post-process/: pretty-journal.py
prepare-emmc-qemu/: prepare-emmc-qemu
pretty-journal/: pretty-journal.py
pwmtachtool/: Makefile  config.h  config.status  configure
pwmtachtool/autom4te.cache/: output.0  requests  traces.1
pwmtachtool/src/: Makefile  Makefile.in  pwmtach_ioctl.h
reboot/: reboot.sh
reboot-ping-pong/: rpp
rootfs_size/: rootfs_size.py
sensor_yaml_config/: README.md  sensor_map.yaml  sensor_yaml_config.py
suichen/dbus-asio-bmk/: Makefile  dbus_asio_bmk.cpp
suichen/dbus-vis/: .gitignore  README.md  boost_handler_timeline_vis.js  dbus-pcap  dbus_pcap_loader.js  dbus_timeline_vis.js  index.html  initialization.js  ipmi_capture.js  ipmi_parse.js  ipmi_timeline_vis.js  ipmi_vis.css  main.js  preload.js  renderer.js  timeline_view.js
suichen/hwmon-bmk/: Makefile  hwmon_bmk.cpp
thalerj/: README.md  openbmctool.py  policyTable.json  redfishEndpointdump.py
thalerj/RPMbuildfiles/: README  buildOpenbmctool.sh  openbmctool.spec
thalerj/build-scripts/: Makefile  control  openbmctool-rhel7.spec
tof-voters/: README.md  voters
tof-voters/config/: rejected_patterns.yaml
tof-voters/libvoters/: __init__.py  acceptable.py  entry_point.py  time.py
tof-voters/libvoters/subcmd/: analyze-commits.py  analyze-reviews.py  dump-gerrit.py  report.py  verify-files.py
tracing/: README.md  trace
witherspoon-debug/: README.md  debug
